исправил create и update patient
